objects/icAgentConsole__incAgentConfigField__c.object
<CustomObject>
    <fields>
        <fullName>icAgentConsole__FieldType__c</fullName>
        <defaultValue>&quot;STRING&quot;</defaultValue>
        <description>Salesforce object field type</description>
        <label>FieldType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__ValueField__c</fullName>
        <inlineHelpText>Field / property of the object, specified in ValueObject field, to get the value for this field</inlineHelpText>
        <label>Value Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__ValueObject__c</fullName>
        <inlineHelpText>Object to get value for this field, i.e. either ScriptVariable or CallInfo or WorkItemInfo</inlineHelpText>
        <label>Value Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__incAgentConfigurationEntity__c</fullName>
        <label>Agent Configuration Entity</label>
        <referenceTo>icAgentConsole__incAgentConfigEntity__c</referenceTo>
        <relationshipLabel>Agent Configuration Fields</relationshipLabel>
        <relationshipName>AgentConfigurationFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agent Configuration Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Configuration Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>